--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 /.phpunit.cache
 /node_modules
-/public/build
-/public/css
-/public/font-awesome
-/public/fonts
-/public/img
-/public/js
+# /public/build
+# /public/css
+# /public/font-awesome
+# /public/fonts
+# /public/img
+# /public/js
 /public/hot
-/public/scss
+# /public/scss
 /public/storage
 /storage/*.key
 /vendor
