--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,11 @@
 <IfModule mod_rewrite.c>
-
    RewriteEngine On
 
-   RewriteBase/
+   # Definir a base para o diretório raiz
+   RewriteBase /
 
-    RewriteRule ^-$public/index.php[L]
-
-       RewriteRule ^((?!public/).*)$ public/$1 [L]
+   # Redirecionar todas as requisições para o public/index.php
+   RewriteCond %{REQUEST_URI} !^public/
+   RewriteRule ^(.*)$ public/$1 [L]
 
 </IfModule>
